Reduce generation of garbage and the time spent on garbage collection by placing gstate into the 2nd element of the patterm implementation array in Adobe compatibility mode only. Ghostscript doesn't use this gstate at all. Bug 689488.

DIFFERENCES:
None.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8727 a1074d23-0009-0410-80fe-cf8c14f379e6